# ads

./: README.MD
cw/cw1/: zad1_4.cpp
lab/: .gitignore
lab/egzaminy/2019/1termin/fab/: clean.sh  makefile  test.sh  zad.cpp
lab/egzaminy/2019/1termin/troj/: zad.cpp
lab/egzaminy/2019/poprawka/cia/: makefile  zad.cpp
lab/egzaminy/2020/1termin/prz/: prz.cpp
lab/egzaminy/2020/1termin/szcz/: szc.cpp
lab/egzaminy/2022/: gie.cpp  rec.cpp  wys.cpp
lab/egzaminy/2023/: kol.cpp  ptv.cpp
lab/egzaminy/2024/1termin/: CMakeLists.txt
lab/egzaminy/2024/1termin/zad1/: CMakeLists.txt  brut.cpp  gen.cpp  makefile  test.sh  zad.cpp
lab/egzaminy/2024/1termin/zad1/tests/: example.in  jumpend.in
lab/egzaminy/2024/1termin/zad2/: CMakeLists.txt  zad.cpp
lab/egzaminy/2024/1termin/zad2/tests/: impossible.in  long.in  long2.in  notlast.in
lab/egzaminy/przygotowawcze/: pos.cpp  tel.cpp
lab/template/: generate.sh
lab/template/zad/: clean.sh  compare.sh
lab/templaty/: drzewo_przedzialowe.cpp
lab/zajecia/zad1/: bazarek.cpp
lab/zajecia/zad2/: matryca.cpp
lab/zajecia/zad3/: sor.cpp
lab/zajecia/zad4/: mecze.cpp
lab/zajecia/zad5/: brut.cpp  gen.cpp  kin.cpp  makefile  test.sh
lab/zajecia/zad6/: brut.cpp  gen.cpp  makefile  mal.cpp  test.sh
lab/zajecia/zad7/: brut.cpp  clean.sh  dyn.cpp  gen.cpp  makefile  test.sh
lab/zajecia/zad8/: .gitignore  prj.cpp
lab/zajecia/zad9/: kap.cpp
lab/zajecia/zal1/: brut.cpp  dom.cpp  gen.cpp  makefile  test.sh
lab/zajecia/zal2/: .gitignore  brut.cpp  gen.cpp  makefile  ogr.cpp  test.sh
(+16 files in other folders)
